# cpp17-execution-policy-practice-with-oneTBB

./: CMakeLists.txt  Dockerfile.22.04  README.md  _main_sort.cpp  _main_transform_points.cpp  run_tbb.22.04_auto.sh  run_tbb.22.04_auto_iter.sh
